Fix ssl for preview links

--- a/reddit_adzerk/templates/baseadframe.html
+++ b/reddit_adzerk/templates/baseadframe.html
@@ -52,7 +52,7 @@ ${self.content()}
 
           var id = window.parent.frames[frame].ados_ads[placement].id;
           var discussLink = document.createElement('a');
-          var adzerkPreview = 'https://preview.adzerk.net/preview/' + id;
+          var adzerkPreview = 'https://preview.adzerk.com/preview/' + id;
 
           discussLink.className = 'discuss-ad';
           discussLink.target = 'top';
